syntax = "proto3";

package inetmock.rpc.v1;

import "audit/v1/event_entity.proto";

message WatchEventsRequest {
  string watcher_name = 1;
}

message WatchEventsResponse {
  inetmock.audit.v1.EventEntity entity = 1;
}

message RegisterFileSinkRequest {
  string target_path = 1;
}

message RegisterFileSinkResponse {
  string resolved_path = 1;
}

message RemoveFileSinkRequest {
  string target_path = 1;
}

message RemoveFileSinkResponse {
  bool sink_got_removed = 1;
}

message ListSinksRequest {}

message ListSinksResponse {
  repeated string sinks = 1;
}

service AuditService {
  rpc WatchEvents(WatchEventsRequest) returns (stream WatchEventsResponse);
  rpc RegisterFileSink(RegisterFileSinkRequest) returns (RegisterFileSinkResponse);
  rpc RemoveFileSink(RemoveFileSinkRequest) returns (RemoveFileSinkResponse);
  rpc ListSinks(ListSinksRequest) returns (ListSinksResponse);
}
